--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,17 @@ dependencies:
   url_launcher: ^6.1.12
   font_awesome_flutter: ^10.5.0
 
+  #  MediaTool
+  ffmpeg_wasm: ^1.0.1
+  file_picker:
+  cross_file:
+  image_editor:
+  image_size_getter:
+  exif:
+  screenshot:
+  flutter_colorpicker:
+  rxdart:
+  flutter_font_picker:
 dev_dependencies:
   flutter_test:
     sdk: flutter
