--- a/firebase.json
+++ b/firebase.json
@@ -11,11 +11,19 @@
     },
     "headers": [
       {
-        "source": "/assets/ffmpeg/**",
+        "source": "/**",
         "headers": [
           {
             "key": "Access-Control-Allow-Origin",
             "value": "*"
+          },
+          {
+            "key": "Cross-Origin-Embedder-Policy",
+            "value": "require-corp"
+          },
+          {
+            "key": "Cross-Origin-Opener-Policy",
+            "value": "same-origin"
           }
         ]
       }
