--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   flutter_svg: ^2.0.7
   get:
   photo_view: ^0.14.0
-  url_launcher: ^6.1.12
+  url_launcher:
   font_awesome_flutter: ^10.5.0
 
   #  MediaTool
@@ -53,6 +53,14 @@ dependencies:
   flutter_colorpicker:
   rxdart:
   flutter_font_picker:
+
+  #  Vlog Feed
+  video_player:
+  video_player_web:
+  video_player_web_hls:
+  visibility_detector:
+  http:
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
