--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/projects/viiv/
+    - assets/images/projects/rbland/
+    - assets/images/projects/modular/
+    - assets/images/projects/crm/
+    - assets/images/projects/chatbot/
+    - assets/images/projects/aloxide/
     - assets/icons/
     - assets/ffmpeg/
   #   - images/a_dot_ham.jpeg
