--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   google_fonts: ^5.1.0
   flutter_svg: ^2.0.7
   get:
-  photo_view: ^0.14.0
+  photo_view: ^0.15.0
   url_launcher:
   font_awesome_flutter: ^10.5.0
 
@@ -62,13 +62,13 @@ dependencies:
   http:
 
   #  Customer Relationship Management (CRM)
-  flutter_supabase_chat_core:
+  flutter_supabase_chat_core: 1.6.0
   flutter_chat_types:
   supabase_flutter: ^2.9.1
   timeago:
   flutter_login: 5.1.0
   file_saver:
-  flutter_chat_ui:
+  flutter_chat_ui: ^1.6.15
   image_picker:
   open_filex:
   infinite_scroll_pagination: ^4.1.0
